# movie-recommendations-api

./: Dockerfile  Dockerfile.old  README.md  docker-compose-old-1.yml  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
api/: settings.py  urls.py  wsgi.py
config/nginx/conf.d/: local.conf
endpoints/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
endpoints/migrations/: 0001_initial.py
ml/: registry.py  tests.py
ml/movie_predictions/: cosine_sim.py
research/: class.ipynb  cosine_sim_small.joblib  improved_recommendations-test.ipynb  improved_recommendations.ipynb  magic.ipynb  metadata.joblib  metadata_small.joblib  simplified.ipynb  test.ipynb
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
